# NDG

./: .gitignore  README.md  inventory.example.yaml  pyproject.toml  requirements.txt
ndg/: __init__.py  cli.py  collector.py  connector.py  diagram.py  inventory.py  platforms.py  storage.py  topology.py
ndg/parsers/: __init__.py  arista_eos.py  cisco_ios.py  cisco_nxos.py  extreme_exos.py  fortinet_fortios.py  juniper_junos.py  paloalto_panos.py  sonic.py
